# fido2-authenticator

./: CMakeLists.txt  README.rst  app.overlay  prj.conf  sample.yaml
Notes & Ideas/: Authenticator Flow.drawio.html  Resident Key Storage Architecture.docx
Notes & Ideas/fido-v2.0-ps-20170927/fido-v2.0-ps-20170927/: fido-appid-and-facets-v2.0-ps-20170927.html  fido-client-to-authenticator-protocol-v2.0-ps-20170927.html  fido-ecdaa-algorithm-v2.0-ps-20170927.html  fido-glossary-v2.0-ps-20170927.html  fido-metadata-service-v2.0-ps-20170927.html  fido-metadata-statement-v2.0-ps-20170927.html  fido-registry-v2.0-ps-20170927.html  fido-security-ref-v2.0-ps-20170927.html
Notes & Ideas/fido-v2.0-ps-20170927/fido-v2.0-ps-20170927/img/: drawings.graffle
Notes & Ideas/fido-v2.0-ps-20170927/fido-v2.0-ps-20170927/resources/: fido-refs.js  katex.js  respec-fido-common.js
app/: app_ctx.c  app_ctx.h  fido_main.c  main.c
drivers/transport/: usb_transport.c
drivers/ui/: button_controller.c  button_controller.h  led_controller.c  led_controller.h
interfaces/: button_if.h  led_if.h
src/: main.c
src/app/: app_ctx.c  app_ctx.h  fido_main.c  fido_main.h  main.c
src/common/: project_defs.h  status_codes.h
src/core/: ctaphid.c
src/core/ctap2/: ctap2_commands.h  ctap2_common.h  ctap2_dispatcher.c  ctap2_dispatcher.h
src/core/ctaphid/: CTAPHID Dispatcher Notes.txt  Deconstructor Notes.txt  Notes.txt  Receiver Notes.txt  ctaphid.h  ctaphid_deconstructor.c  ctaphid_deconstructor.h  ctaphid_dispatcher.c  ctaphid_dispatcher.h  ctaphid_handler.c  ctaphid_handler.h  ctaphid_receiver.c  ctaphid_receiver.h  ctaphid_reconstructor.c  ctaphid_reconstructor.h
src/core/error_mapper/: error_codes.h  error_domains.h  error_mapper.c  error_mapper.h
src/core/fast_path/: fast_path_responder.c  fast_path_responder.h
src/core/state_machine/: app_events.h  event_queue.c  event_queue.h  state_handlers.c  state_handlers.h  state_machine.c  state_machine.h
src/drivers/crypto/psa/: crypto_system.c
src/drivers/transport/: usb_transport.c  usb_transport.h
src/drivers/ui/: button_controller.c
src/interfaces/crypto/: crypto_common.h  crypto_system.h
src/interfaces/flash/: flash.h  flash_common.h
src/interfaces/transport/: transport_if.h
src/storage/: DirectoryLayout.txt
utils/logger/: logger.c  logger.h
(+29 files in other folders)
